# evc-team-relay-mcp

./: .dockerignore  .gitignore  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  relay_mcp.py  server.json  smithery-release.mcpb  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  pypi-publish.yml  trivy.yml
config/claude-code/: .mcp.json
config/codex/: codex.json
config/opencode/: opencode.json
tests/: test_jwt_mode.py  test_mesh_upload.py  test_multi_key.py
