[project]
name = "evc-team-relay-mcp"
version = "1.0.0"
description = "MCP server for reading and writing Obsidian vault documents via EVC Team Relay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
relay-mcp = "relay_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
