[project]
name = "evc-team-relay-mcp"
version = "1.0.0"
description = "MCP server for reading and writing Obsidian vault documents via EVC Team Relay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Entire VC", email = "in@entire.vc"}]
keywords = ["mcp", "obsidian", "relay", "collaboration", "crdt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://entire.vc/team-relay/"
Repository = "https://github.com/entire-vc/evc-team-relay-mcp"
Issues = "https://github.com/entire-vc/evc-team-relay-mcp/issues"

[project.scripts]
evc-team-relay-mcp = "relay_mcp:main"
relay-mcp = "relay_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["relay_mcp.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"